# hello-python

./: .gitignore  00-Python 学习大纲.md  00-Python学习大纲.md  02-变量与数据类型-详细版.md  04-流程控制.md  05-数据结构.md  05a-列表List.md  05b-元组Tuple.md  05c-字典Dict.md  05d-集合Set.md  06-函数.md  06-列表.md  07-模块与包.md  08-字典.md  08-文件操作 - 详细版.md  09-面向对象编程.md  10-函数.md  10-错误与异常.md  11-模块与包.md  11-迭代器与生成器 - 详细版.md  12-文件操作.md  12-装饰器与闭包.md  13-正则表达式 - 详细版.md  13-面向对象编程.md  14-并发编程 - 详细版.md  14-并发编程.md  15-实用项目 - 详细版.md  15-迭代器与生成器.md  16-uv 包管理器详解.md  17-正则表达式.md  17-类型提示.md  18-字符串.md  19-列表推导式详解.md  19-实用项目.md  20-asyncio 高级编程.md  21-类型提示.md  22-列表推导式.md  23-asyncio高级编程.md  AGENTS.md  CLAUDE.md  (+2 more)
01-基础入门篇/: 01-Python简介与环境搭建.md  02-变量与数据类型.md  03-基本运算符.md  04-流程控制.md  05-字符串.md  06-列表.md  07-元组.md  08-字典.md  09-集合.md  10-列表推导式.md  README.md
01-基础入门篇/examples/: README.md  pyproject.toml
01-基础入门篇/examples/src/: 02_environment.py  03_variables.py  07_lists.py
01-基础入门篇/examples/tests/: test_03_variables.py  test_04_operators.py  test_05_flow_control.py  test_07_lists.py
02-核心编程篇/: 01-函数.md  02-模块与包.md  03-文件操作.md  04-面向对象编程.md  05-错误与异常.md  06-迭代器与生成器.md  07-装饰器与闭包.md  08-类型提示.md  09-类型注解进阶.md  11-模块与包.md  14-错误与异常.md  16-装饰器与闭包.md  README.md
02-核心编程篇/06-类型提示/type_hints_demo/: README.md  pyproject.toml
02-核心编程篇/06-类型提示/type_hints_demo/app/core/: __init__.py  advanced.py  basics.py  generics.py  protocols.py
02-核心编程篇/06-类型提示/type_hints_demo/app/utils/: __init__.py
02-核心编程篇/06-类型提示/type_hints_demo/tests/: test_basics.py  test_protocols.py
03-进阶专题篇/: 02-并发编程.md  03-包管理工具.md  04-类型提示.md  05-列表推导式.md  06-asyncio 高级编程.md  README.md
03-进阶提升篇/: 01-正则表达式.md  02-并发编程.md  18-并发编程.md
03-高级语法篇/: 01-正则表达式.md  02-并发与异步编程.md  02-模块与包.md  03-文件操作.md  README.md
04-Web 开发篇/: 01-Web 基础入门.md  01-Web基础.md  02-Flask快速上手.md  02-HTML 与 CSS.md  03-Flask进阶.md  03-JavaScript 基础.md  04-Flask 入门.md  04-Flask高级.md  05-FastAPI.md  05-Flask 进阶.md  06-Flask 高级.md  06-服务端项目实战.md  07-FastAPI 入门.md  08-FastAPI 进阶.md  09-RESTful API 设计.md  10-WebSocket 通信.md  11-Web 项目实战.md  README.md
04-Web开发篇/: README.md
04-专题深入篇/: 01-uv包管理器.md  02-类型提示.md  03-列表推导式.md  04-asyncio高级编程.md
04-服务端编程篇/: 01-Web基础.md  06-服务端项目实战.md
05-Python工具箱/: 11-模块与包.md  (+2 more)
07-项目实战篇/Level-1-入门级/GitHub热榜追踪/github_trending/: README.md  pyproject.toml
07-项目实战篇/Level-1-入门级/GitHub热榜追踪/github_trending/app/: __init__.py  fetcher.py  main.py  models.py  parser.py  storage.py
07-项目实战篇/Level-1-入门级/GitHub热榜追踪/github_trending/tests/: __init__.py  test_fetcher.py  test_main.py  test_models.py  test_parser.py  test_storage.py
07-项目实战篇/Level-1-入门级/GitHub热榜追踪/github_trending/tests/fixtures/: sample.html
07-项目实战篇/Level-1-入门级/天气监控平台/weather_monitor/: pyproject.toml
07-项目实战篇/Level-1-入门级/天气监控平台/weather_monitor/app/: __init__.py
07-项目实战篇/Level-1-入门级/天气监控平台/weather_monitor/app/api/: __init__.py
07-项目实战篇/Level-1-入门级/文件批量处理工具/file_processor/: README.md  pyproject.toml
07-项目实战篇/Level-1-入门级/文件批量处理工具/file_processor/processor/: __init__.py  cli.py
07-项目实战篇/Level-2-进阶级/数据采集爬虫/web_crawler/: pyproject.toml
07-项目实战篇/Level-2-进阶级/数据采集爬虫/web_crawler/crawler/: cli.py  config.py
07-项目实战篇/Level-2-进阶级/数据采集爬虫/web_crawler/crawler/parsers/: html.py
07-项目实战篇/Level-2-进阶级/数据采集爬虫/web_crawler/crawler/storage/: data.py
07-项目实战篇/Level-2-进阶级/数据采集爬虫/web_crawler/crawler/utils/: __init__.py  http.py
07-项目实战篇/Level-3-高级/后台商城系统/shop/: README.md  pyproject.toml
07-项目实战篇/Level-3-高级/后台商城系统/shop/app/: main.py
07-项目实战篇/Level-3-高级/后台商城系统/shop/app/models/: __init__.py
07-项目实战篇/Level-3-高级/后台商城系统/shop/app/services/: __init__.py
07-项目实战篇/Level-3-高级/实时聊天应用/chat_server/: pyproject.toml
07-项目实战篇/Level-3-高级/实时聊天应用/chat_server/app/api/: __init__.py  rest.py  websocket.py
07-项目实战篇/Level-3-高级/实时聊天应用/chat_server/app/core/: __init__.py
07-项目实战篇/Level-3-高级/实时聊天应用/chat_server/app/services/: store.py
07-项目实战篇/Level-3-高级/股票数据监控系统/stock_monitor/: README.md  pyproject.toml
07-项目实战篇/Level-3-高级/股票数据监控系统/stock_monitor/app/: main.py
07-项目实战篇/Level-3-高级/股票数据监控系统/stock_monitor/app/api/: __init__.py
07-项目实战篇/Level-3-高级/股票数据监控系统/stock_monitor/app/core/: config.py
07-项目实战篇/Level-3-高级/股票数据监控系统/stock_monitor/app/models/: __init__.py
07-项目实战篇/Level-4-专业级/AI聊天助手/ai_chat_assistant/: .env.example  pyproject.toml
07-项目实战篇/Level-4-专业级/AI聊天助手/ai_chat_assistant/ai_chat_assistant/config/: __init__.py
07-项目实战篇/Level-4-专业级/AI聊天助手/ai_chat_assistant/ai_chat_assistant/services/: __init__.py  chat.py
07-项目实战篇/任务管理系统/task_manager/: README.md  pyproject.toml
07-项目实战篇/任务管理系统/task_manager/app/: __init__.py
07-项目实战篇/任务管理系统/task_manager/app/models/: schemas.py
07-项目实战篇/任务管理系统/task_manager/app/services/: __init__.py
07-项目实战篇/博客系统/blog/: pyproject.toml
07-项目实战篇/博客系统/blog/app/: __init__.py
07-项目实战篇/博客系统/blog/app/core/: __init__.py
07-项目实战篇/博客系统/blog/app/services/: post.py
07-项目实战篇/文件管理系统/file_manager/: pyproject.toml
07-项目实战篇/文件管理系统/file_manager/app/core/: database.py
07-项目实战篇/日志分析系统/log_analyzer/: README.md  pyproject.toml
07-项目实战篇/日志分析系统/log_analyzer/analyzer/: __init__.py
07-项目实战篇/日志分析系统/log_analyzer/analyzer/statistics/: __init__.py
09-LangChain与LangGraph篇/01-LangChain入门/langchain_basics/: README.md  pyproject.toml
09-LangChain与LangGraph篇/01-LangChain入门/langchain_basics/app/: main.py
09-LangChain与LangGraph篇/01-LangChain入门/langchain_basics/tests/: test_main.py
09-LangChain与LangGraph篇/02-LangGraph入门/langgraph_basics/: README.md  pyproject.toml
09-LangChain与LangGraph篇/02-LangGraph入门/langgraph_basics/app/: main.py
09-LangChain与LangGraph篇/02-LangGraph入门/langgraph_basics/tests/: test_main.py
09-LangChain与LangGraph篇/05-LangGraph进阶/langgraph_advanced/: README.md  pyproject.toml
09-LangChain与LangGraph篇/05-LangGraph进阶/langgraph_advanced/app/: main.py
09-LangChain与LangGraph篇/05-LangGraph进阶/langgraph_advanced/tests/: test_main.py
09-LangChain与LangGraph篇/06-Agent实战/projects/agent_assistant/: README.md  pyproject.toml
09-LangChain与LangGraph篇/06-Agent实战/projects/agent_assistant/app/: main.py
09-LangChain与LangGraph篇/06-Agent实战/projects/agent_assistant/tests/: test_main.py
(+803 files in other folders)
