[project]
name = "type-hints-demo"
version = "0.2.0"
description = "Python 类型提示示例项目"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "mypy>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
