[project]
name = "log-analyzer"
version = "0.1.0"
description = "日志分析系统 - 日志解析与统计分析"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
]

[project.scripts]
log-analyzer = "analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analyzer"]